# Cobot

./: .gitignore  README.md  projectplan.md
URDF v1.0/Cobot/meshes/: Link1.STL  Link3.STL
URDF v1.0/Cobot/urdf/: Cobot.csv  Cobot.urdf
printable-CAD/: Base-Door.STL  Base-Roof.STL  Base.STL  Bicept.STL  Forearm.STL  Shoulder.STL  Wrist.STL
ros2_cobot/install/: local_setup.sh  setup.sh
ros2_cobot/isaacLab/: isaacLab_ball.py  isaacLab_dance.py  isaacLab_viewer.py
ros2_cobot/log/: latest_build  latest_list
ros2_cobot/scripts/: build_workspace.sh
ros2_cobot/src/: setup.py
ros2_cobot/src/cobot_control/: camera_node.py  motor.py  package.xml  setup.py  utilities.py
ros2_cobot/src/cobot_control/cobot_control/: cobot.py
ros2_cobot/src/cobot_control/config/: joint_names_Cobot.yaml  servo_params.yaml
ros2_cobot/src/cobot_control/controllers/: joint_controller.py
ros2_cobot/src/cobot_control/kinematics/: ik_solver.py
ros2_cobot/src/cobot_control/launch/: cobot.launch.py  isaacLab_articulations.py  isaacLab_run_ env.py
ros2_cobot/src/cobot_control/meshes/: Link2.STL  Wrist.STL  base_link.STL
ros2_cobot/src/cobot_control/urdf/: Cobot.urdf
ros2_cobot/src/cobot_description/: CMakeLists.txt
ros2_cobot/src/cobot_imol/: ou_noise.py  replay_buffer.py  sim_wrapper.py
ros2_cobot/src/cobot_interfaces/: CMakeLists.txt
ros2_cobot/src/cobot_perception/: setup.cfg  setup.py
ros2_cobot/src/cobot_slam/: CMakeLists.txt  package.xml
ros2_cobot/src/cobot_slam/src/: orb3_slam_node.cpp
ros2_cobot/src/config/: servo_params.yaml
ros2_cobot/src/isaacLab/: isaacLab_dance.py  isaacLab_env_managerWorkflow.py  isaacLab_run_env.py  isaacLab_scene.py
ros2_cobot/src/urdf/: Cobot.urdf  cobot.csv
ros2_cobot/src/utilities/: song_extraction.py
ros2_cobot/utilities/: paths.py
(+140 files in other folders)
